AR images added to introduction chapters. All reference to figures, equations and tables are also in caps now

--- a/ThesisReport/Background.tex
+++ b/ThesisReport/Background.tex
@@ -1,7 +1,7 @@
 \chapter{Background and Related Works}
 \label{chap:Background}
 
-In this chapter we review the relevant concepts to this study and introduce the techniques used during this research work.
+In this chapter, we introduce the relevant concepts and review the techniques used in this research.
 
 \section{Stereo Vision}
 
@@ -77,12 +77,12 @@ for corresponding points and eliminates certain complications in stereo matching
 
 \begin{figure}[!h]
 \centering
-\includegraphics[width=0.65\textwidth,trim=22mm 0mm 0mm 150mm,clip]{rectdisp}
+\includegraphics[width=0.65\textwidth, trim=20mm 0mm 0mm 150mm,clip]{rectdisp}
 \caption{Rectified image pairs and disparity geometry}
 \label{fig:rectify}
 \end{figure} 
 
-Sample stereo images taken using two regular webcams are displayed in figures \ref{fig:unrect} and \ref{fig:rect},
+Sample stereo images taken using two regular webcams are displayed in Figure \ref{fig:unrect} and \ref{fig:rect},
 before and after rectification. 
 The red line shows how features get aligned in the left and right image after the rectification process.
 
@@ -356,7 +356,7 @@ Erosion, which can be considered as the complementary operation of dilation, fol
 structuring element is moved over foreground pixels and any
 foreground pixels will be replaced by the background value if at least one pixel of the structuring element overlaps with a pixel marked as background.
 Hence, we can state that dilation of the foreground is equivalent to erosion of the background \cite{ritt00}.
-The dilation and erosion operations are illustrated in figures \ref{fig:dilate} and \ref{fig:erode}, respectively.
+The dilation and erosion operations are illustrated in Figure \ref{fig:dilate} and \ref{fig:erode}, respectively.
 
 \begin{figure}[H]
 \centering
@@ -372,7 +372,7 @@ The dilation and erosion operations are illustrated in figures \ref{fig:dilate} 
 \label{fig:erode}
 \end{figure} 
 
-The sample image shown in figure \ref{fig:edgenodil} is presented below after applying dilation on the detected edges in the image to expand the 
+The sample image shown in Figure \ref{fig:edgenodil} is presented below after applying dilation on the detected edges in the image to expand the 
 detected regions.
 
 \begin{figure}[H]
