--- a/ThesisReport/BinocularVision.tex
+++ b/ThesisReport/BinocularVision.tex
@@ -102,7 +102,7 @@ the approximate formula as follows:
 Here, $a$ is the distance between the center of the pupils of the two eyes, which is known as interpupillary distance.
 It should be noted that $a$, $Z$ and $ \Delta Z$ must all have the same units in this formula. 
 This equation estimates the angular disparity in radian; in order to convert $\theta$ to arcseconds, 
-according to the conversion rules presented in equation \ref{eq:arcsec}, it should be multiplied by:
+according to the conversion rules presented in Equation \ref{eq:arcsec}, it should be multiplied by:
 
 \begin{align}
 \frac {648000} {\pi} = 206,265
@@ -133,7 +133,7 @@ shows that the average stereoacuity for different age groups is as follows: \new
 As can be seen, the stereoacuity for the the human visual system increases with aging; that is, 
 the amount of error in the depth results 
 is less perceptible in the visual system of the elders than the younger ones.
-Using these values in equation \ref{eq:stac} along with the average interpupillary distance in the human visual system 
+Using these values in Equation \ref{eq:stac} along with the average interpupillary distance in the human visual system 
 that is reported to be approximately $64$mm \cite{how95}, 
 we can estimate the threshold for minimum detectable depth
 between two objects based on their distance from the observer. \newline 
