added the dilation-erosion kernel size to image captions

--- a/ThesisReport/Background.tex
+++ b/ThesisReport/Background.tex
@@ -361,14 +361,14 @@ The dilation and erosion operations are illustrated in Figure \ref{fig:dilate} a
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.8]{diltbin}
-\caption{Dilation operation \cite{HIPRdil}}
+\caption{Dilation operation with a 3x3 structuring element \cite{HIPRdil}}
 \label{fig:dilate}
 \end{figure} 
 
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.8]{erodbin}
-\caption{Erosion operation \cite{HIPRerod}}
+\caption{Erosion operation with a 3x3 structuring element \cite{HIPRerod}}
 \label{fig:erode}
 \end{figure} 
 
@@ -378,7 +378,7 @@ detected regions.
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.35]{mask5dil}
-\caption{Dilation of the detected edges in an image}
+\caption{Dilation of the detected edges in an image with a 10x10 structuring element}
 \label{fig:edgedil}
 \end{figure} 
 
