canny image caption corrected

--- a/ThesisReport/Background.tex
+++ b/ThesisReport/Background.tex
@@ -323,14 +323,14 @@ Figure \ref{fig:edgenodil} shows the detected edges obtained by applying the can
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.35]{imggt5}
-\caption{Canny edge detection in an image}
+\caption{Disparity image}
 \label{fig:imggt5}
 \end{figure} 
 
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.35]{mask5nodil}
-\caption{Canny edge detection in an image}
+\caption{Canny edge detection on an image}
 \label{fig:edgenodil}
 \end{figure} 
 
