--- a/ThesisReport/BinocularVision.tex
+++ b/ThesisReport/BinocularVision.tex
@@ -4,7 +4,7 @@
 \textit{Binocular vision} is a term used for the visual system of animals with two eyes \cite{how95}, and therefore, applies to the human visual system as well. 
 Possessing binocular vision not only leads to a better perception of depth
 of the surrounding environment, but also helps to better perform many visual tasks such as reading, object detection, interaction with surrounding objects such as grabbing and other manipulative 
-tasks. The most significant advantage of possessing binocular vision is its influence on how the 3D environment; that is, the 
+tasks. The most significant advantage of possessing binocular vision is its influence on how the 3D environment, that is, the 
 depth of surrounding objects relative to each other, 
 is perceived by the visual system. This visual perception of depth in binocular vision is referred to as {\it Stereoscopic Vision}.
 In the visual system, depth perception is a phenomenon that normally occurs though different types of cues and information existing in the surrounding environment. 
@@ -56,7 +56,7 @@ In stereo vision, the locus of the points that yield a unified view of an object
 known as the {\it horopter}, and any point located on the horopter is usually called a 
 {\it fixation point} \cite{binr83,how95}.
 An important property of an object on the horopter is that no spatial difference
-exists between the images of the fixated object between the two eyes; that is, the binocular disparity is zero \cite{how95}. 
+exists between the images of the fixated object between the two eyes, that is, the binocular disparity is zero \cite{how95}. 
 Exploiting this property, the disparity of any other object in the scene can be estimated relative to the fixated object by inspecting two important factors: 
 whether the object of interest is closer or further than the fixated object and then how much closer or further it is relative to the fixated object.
 As a result, the binocular disparity provides a relative perception of depth of the surrounding environment.
@@ -113,7 +113,7 @@ This threshold, which is defined as the minimum detectable depth between two
 objects at difference distances, is known as {\it stereoacuity} which varies in different visual systems \cite{binr83,how95}. According to standard
 stereo tests \cite{binr83}, the finest detectable disparity in the human visual system is approximately 10-15 arcseconds.
 However, a more recent study on 60 subjects \cite{garn06} at different age groups, from 17 to 83 using standard stereotests, 
-shows that the average stereoacuity for different age groups is as follows: \newline
+shows that the average stereoacuity for different age groups is as follows:
 
 \begin{minipage}{\linewidth}
 \begin{center}
@@ -130,9 +130,9 @@ shows that the average stereoacuity for different age groups is as follows: \new
 \end{center}
 \end{minipage} \newline \newline
 
-As can be seen, the stereoacuity for the the human visual system increases with aging; that is, 
+As can be seen, the stereoacuity for the the human visual system increases with aging, that is, 
 the amount of error in the depth results 
-is less perceptible in the visual system of the elders than the younger ones.
+is less perceptible in the visual system of the elders than the younger people.
 Using these values in Equation \ref{eq:stac} along with the average interpupillary distance in the human visual system 
 that is reported to be approximately $64$mm \cite{how95}, 
 we can estimate the threshold for minimum detectable depth
