--- a/ThesisReport/thesis.tex
+++ b/ThesisReport/thesis.tex
@@ -15,6 +15,7 @@
 \usepackage{longtable}
 \usepackage{listings}
 \usepackage{color}
+\usepackage{alltt}
 %\usepackage{epstopdf}
 %\numberwithin{equation}{section}
 
