--- a/ThesisReport/BinocularVision.tex
+++ b/ThesisReport/BinocularVision.tex
@@ -64,7 +64,7 @@ whether the object of interest is closer or further than the fixated object and 
 As a result, the binocular disparity provides a relative perception of depth of the surrounding environment.
 In the geometry of stereopsis, the relative disparity between two objects is usually presented as 
 angular disparity in degrees, radians, minutes of arc (arcminute), 
-or seconds of arc (arcsecond). The relation between these measurements is as follows:
+or seconds of arc (arcseconds). The relation between these measurements is as follows:
 
 \begin{align}
 1 arcmin &= \frac{1}{60} degree = \frac{\pi}{10800} radians \label{eq:arcmin} \\
@@ -114,7 +114,7 @@ This equation estimates the angular disparity in radians; in order to convert $\
 according to the conversion rules presented in Equation \ref{eq:arcsec}, it should be multiplied by:
 
 \begin{align}
-\frac {648000} {\pi} = 206,265 \frac{arcsec}{radians}
+\frac {648000} {\pi} = 206,265 \frac{arcsecs}{radians}
 \end{align}
 
 Studies show that the visual system capability to distinguish two objects at different depths relative to each other is limited to certain thresholds \cite{binr83,how95}.
