Introduction updated with tsukuba images for AR

--- a/ThesisReport/Introduction.tex
+++ b/ThesisReport/Introduction.tex
@@ -156,15 +156,15 @@ Therefore, in an augmented reality application, wrong depth results, especially 
 which will lead to erroneous registration of virtual and real objects, 
 can be perceived easier by the human visual system. This can lead to poor performance of the system and possibly faulty interaction between 
 the user and the augmented world.
-Figure \ref{fig:ARreg} shows an accurate and faulty registration of objects in a 3D environment that results from an accurate and 
-wrong disparity map in the areas of depth discontinuities.
+Figure \ref{fig:ARreg} shows an accurate and faulty registration of objects (the lamp, the head and the synthetic triangle) in a 3D environment that results from an accurate and 
+wrong disparity map in a speacific area of depth discontinuity.
 
-\begin{figure}[h!]
+\begin{figure}[H]
 \centering
 \subcaptionbox{Accurate registration of objects}
-[.5\linewidth]{\includegraphics[scale=1.1]{ARaccurate}}%
+[.5\linewidth]{\includegraphics[scale=0.7]{tsukuba}}%
 \subcaptionbox{Erroneous registration of objects}
-[.5\linewidth]{\includegraphics[scale=1.1]{ARdist}}%
+[.5\linewidth]{\includegraphics[scale=0.7]{tsukubadist}}%
 \caption{Integration of objects in a 3D environment}
 \label{fig:ARreg}
 \end{figure}
